port to riscv64

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS
     CACHE INTERNAL "")
 project(InferLLM LANGUAGES C CXX ASM)
 
+# change compiler
+# set(CMAKE_C_COMPILER riscv64-unknown-linux-gnu-gcc)
+# set(CMAKE_CXX_COMPILER riscv64-unknown-linux-gnu-g++)
+
 option(ENABLE_ASAN "Build with asan." OFF)
 option(ENABLE_PROFILE "Build with profile information." OFF)
 option(ENABLE_GPROF "Build with gprof enabled." OFF)
@@ -11,45 +15,47 @@ option(ENABLE_DOT "Build with Arm dotprod." OFF)
 option(ENABLE_FP16 "Build with Arm FP16." OFF)
 option(ENABLE_GPU "Build with GPU." OFF)
 option(ENABLE_TEST "Build with TEST." OFF)
-set(INFER_ARCH "auto" CACHE STRING "Build with specific ISA (x86/arm/rvvXpX).")
+# set(INFER_ARCH "auto" CACHE STRING "Build with specific ISA (x86/arm/rvvXpX).")
+# use naive
+set(INFER_ARCH "" CACHE STRING "Build with specific riscv64.")
 
-if(${INFER_ARCH} STREQUAL "auto")
-  if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64") 
-    set(INFER_ARCH "x86")
-  elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "arm64")
-    set(INFER_ARCH "arm")
-	elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "riscv64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "riscv32")
-    set(INFER_ARCH "rvv1p0")
-  endif()
-endif()
+# if(${INFER_ARCH} STREQUAL "auto")
+#   if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64") 
+#     set(INFER_ARCH "x86")
+#   elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "arm64")
+#     set(INFER_ARCH "arm")
+# 	elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "riscv64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "riscv32")
+#     set(INFER_ARCH "rvv1p0")
+#   endif()
+# endif()
 
-if(${INFER_ARCH} MATCHES "rvv.p.")
-  string(SUBSTRING ${INFER_ARCH} 3 -1 RVV_VER)
-  string(REPLACE "p" "" RVV_VER ${RVV_VER})
-  string(PREPEND RVV_VER "1")
-  message(STATUS "current platform: ${INFER_ARCH} with ${RVV_VER}")
-  set(INFER_ARCH "rvv")
-  add_definitions(-DINFER_RVV=${RVV_VER})
-elseif(${INFER_ARCH} STREQUAL "x86")
-  message(STATUS "current platform: x86")
-  set(INFER_ARCH "x86")
-  add_definitions(-DINFER_X86=1)
-elseif(${INFER_ARCH} STREQUAL "arm")
-  message(STATUS "current platform: arm")
-  set(INFER_ARCH "arm")
-  add_definitions(-DINFER_ARM=1)
-  if(ENABLE_DOT)
-      message(STATUS "Enable dotprod feature in armv8.2-a")
-      set(CMAKE_CXX_FLAGS " -march=armv8.2-a+dotprod ${CMAKE_CXX_FLAGS}")
-  endif()
-  if(ENABLE_FP16)
-      message(STATUS "Enable fp16 feature in armv8.2-a")
-      set(CMAKE_CXX_FLAGS " -march=armv8.2-a+fp16 ${CMAKE_CXX_FLAGS}")
-  endif()
-else()
-  message(STATUS "current platform: NONE")
-  set(INFER_ARCH "")
-endif()
+# if(${INFER_ARCH} MATCHES "rvv.p.")
+#   string(SUBSTRING ${INFER_ARCH} 3 -1 RVV_VER)
+#   string(REPLACE "p" "" RVV_VER ${RVV_VER})
+#   string(PREPEND RVV_VER "1")
+#   message(STATUS "current platform: ${INFER_ARCH} with ${RVV_VER}")
+#   set(INFER_ARCH "rvv")
+#   add_definitions(-DINFER_RVV=${RVV_VER})
+# elseif(${INFER_ARCH} STREQUAL "x86")
+#   message(STATUS "current platform: x86")
+#   set(INFER_ARCH "x86")
+#   add_definitions(-DINFER_X86=1)
+# elseif(${INFER_ARCH} STREQUAL "arm")
+#   message(STATUS "current platform: arm")
+#   set(INFER_ARCH "arm")
+#   add_definitions(-DINFER_ARM=1)
+#   if(ENABLE_DOT)
+#       message(STATUS "Enable dotprod feature in armv8.2-a")
+#       set(CMAKE_CXX_FLAGS " -march=armv8.2-a+dotprod ${CMAKE_CXX_FLAGS}")
+#   endif()
+#   if(ENABLE_FP16)
+#       message(STATUS "Enable fp16 feature in armv8.2-a")
+#       set(CMAKE_CXX_FLAGS " -march=armv8.2-a+fp16 ${CMAKE_CXX_FLAGS}")
+#   endif()
+# else()
+#   message(STATUS "current platform: NONE")
+#   set(INFER_ARCH "")
+# endif()
 
 if(ENABLE_PROFILE)
   message(STATUS "Enable profile information.")
