--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,6 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS
     CACHE INTERNAL "")
 project(InferLLM LANGUAGES C CXX ASM)
 
-# change compiler
-# set(CMAKE_C_COMPILER riscv64-unknown-linux-gnu-gcc)
-# set(CMAKE_CXX_COMPILER riscv64-unknown-linux-gnu-g++)
-
 option(ENABLE_ASAN "Build with asan." OFF)
 option(ENABLE_PROFILE "Build with profile information." OFF)
 option(ENABLE_GPROF "Build with gprof enabled." OFF)
@@ -17,7 +13,7 @@ option(ENABLE_GPU "Build with GPU." OFF)
 option(ENABLE_TEST "Build with TEST." OFF)
 # set(INFER_ARCH "auto" CACHE STRING "Build with specific ISA (x86/arm/rvvXpX).")
 # use naive
-set(INFER_ARCH "" CACHE STRING "Build with specific riscv64.")
+set(INFER_ARCH "" CACHE STRING "Build with riscv64.")
 
 # if(${INFER_ARCH} STREQUAL "auto")
 #   if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64") 
@@ -57,10 +53,10 @@ set(INFER_ARCH "" CACHE STRING "Build with specific riscv64.")
 #   set(INFER_ARCH "")
 # endif()
 
-if(ENABLE_PROFILE)
-  message(STATUS "Enable profile information.")
-  add_definitions(-DINFER_PROFILE) 
-endif()
+# if(ENABLE_PROFILE)
+#   message(STATUS "Enable profile information.")
+#   add_definitions(-DINFER_PROFILE) 
+# endif()
 
 file(GLOB_RECURSE SRC src/*.cpp src/*.h)
 
@@ -72,18 +68,18 @@ endif()
 
 set(CMAKE_CXX_FLAGS " -std=c++11 -pthread -Wno-multichar -fPIC ${CMAKE_CXX_FLAGS}")
 
-if(ENABLE_GPU)
-  message(STATUS "Build with GPU.")
-  add_definitions(-DENABLE_GPU=1)
-  find_package(CUDA)
-  include_directories(${CUDA_INCLUDE_DIRS})
+# if(ENABLE_GPU)
+#   message(STATUS "Build with GPU.")
+#   add_definitions(-DENABLE_GPU=1)
+#   find_package(CUDA)
+#   include_directories(${CUDA_INCLUDE_DIRS})
 
-  file(GLOB_RECURSE GPU_SRC src/kern/gpu/*.cu src/kern/gpu/*.h)
-  cuda_add_library(InferLLMGPU STATIC ${GPU_SRC})
-  target_include_directories(InferLLMGPU PUBLIC include src)
-  target_include_directories(InferLLMGPU PUBLIC ${CUDA_CUBLAS_INCLUDE_DIRS}})
-  target_link_libraries(InferLLMGPU ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
-endif()
+#   file(GLOB_RECURSE GPU_SRC src/kern/gpu/*.cu src/kern/gpu/*.h)
+#   cuda_add_library(InferLLMGPU STATIC ${GPU_SRC})
+#   target_include_directories(InferLLMGPU PUBLIC include src)
+#   target_include_directories(InferLLMGPU PUBLIC ${CUDA_CUBLAS_INCLUDE_DIRS}})
+#   target_link_libraries(InferLLMGPU ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
+# endif()
 add_library(InferLLM STATIC ${SRC} ${PLTSRC})
 
 add_library(InferLLMShared SHARED  ${SRC} ${PLTSRC})
@@ -98,61 +94,61 @@ else()
   set(CMAKE_CXX_FLAGS " -O3 -g ${CMAKE_CXX_FLAGS}")
 endif()
 
-if(ENABLE_GPROF)
-  include(CheckCXXCompilerFlag)
-  CHECK_CXX_COMPILER_FLAG("-pg" HAS_GPROF)
-  message(WARNING "Build with gprof: ${HAS_GPROF}. Gprof may not work on darwin.")
-  if(HAS_GPROF)
-    set(CMAKE_CXX_FLAGS " -pg ${CMAKE_CXX_FLAGS}")
-  endif()
-endif()
+# if(ENABLE_GPROF)
+#   include(CheckCXXCompilerFlag)
+#   CHECK_CXX_COMPILER_FLAG("-pg" HAS_GPROF)
+#   message(WARNING "Build with gprof: ${HAS_GPROF}. Gprof may not work on darwin.")
+#   if(HAS_GPROF)
+#     set(CMAKE_CXX_FLAGS " -pg ${CMAKE_CXX_FLAGS}")
+#   endif()
+# endif()
 
-if(ENABLE_ASAN)
-  if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
-    set(CMAKE_CXX_FLAGS
-        " -fsanitize=address -g -O0 -static-libsan ${CMAKE_CXX_FLAGS}"
-    )
-    set(CMAKE_LINK_FLAGS "-fsanitize=address -static-libsan ${CMAKE_LINK_FLAGS}")
-  else()
-    set(CMAKE_CXX_FLAGS
-        " -fsanitize=address -g -O0 -static-libasan ${CMAKE_CXX_FLAGS}"
-    )
-    set(CMAKE_LINK_FLAGS "-fsanitize=address -static-libasan ${CMAKE_LINK_FLAGS}")
-  endif()
-  add_definitions(-DENABLE_ASAN)
-endif()
+# if(ENABLE_ASAN)
+#   if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
+#     set(CMAKE_CXX_FLAGS
+#         " -fsanitize=address -g -O0 -static-libsan ${CMAKE_CXX_FLAGS}"
+#     )
+#     set(CMAKE_LINK_FLAGS "-fsanitize=address -static-libsan ${CMAKE_LINK_FLAGS}")
+#   else()
+#     set(CMAKE_CXX_FLAGS
+#         " -fsanitize=address -g -O0 -static-libasan ${CMAKE_CXX_FLAGS}"
+#     )
+#     set(CMAKE_LINK_FLAGS "-fsanitize=address -static-libasan ${CMAKE_LINK_FLAGS}")
+#   endif()
+#   add_definitions(-DENABLE_ASAN)
+# endif()
 
-add_executable(llama application/llama/llama.cpp)
-target_link_libraries(llama InferLLM)
+# add_executable(llama application/llama/llama.cpp)
+# target_link_libraries(llama InferLLM)
 
 add_executable(chatglm application/chatglm/chatglm.cpp)
 target_link_libraries(chatglm InferLLM)
 
-add_executable(chat application/chat.cpp)
-target_link_libraries(chat InferLLM)
+# add_executable(chat application/chat.cpp)
+# target_link_libraries(chat InferLLM)
 
-add_executable(quantizer application/quantizer.cpp)
-target_link_libraries(quantizer InferLLM)
+# add_executable(quantizer application/quantizer.cpp)
+# target_link_libraries(quantizer InferLLM)
 
-if(ENABLE_GPU)
-  target_link_libraries(InferLLM InferLLMGPU)
-  target_link_libraries(InferLLMShared InferLLMGPU)
-  target_link_libraries(llama InferLLMGPU)
-  target_link_libraries(chatglm InferLLMGPU)
-  target_link_libraries(quantizer InferLLMGPU)
-  target_link_libraries(chat InferLLMGPU)
-endif()
+# if(ENABLE_GPU)
+#   target_link_libraries(InferLLM InferLLMGPU)
+#   target_link_libraries(InferLLMShared InferLLMGPU)
+#   target_link_libraries(llama InferLLMGPU)
+#   target_link_libraries(chatglm InferLLMGPU)
+#   target_link_libraries(quantizer InferLLMGPU)
+#   target_link_libraries(chat InferLLMGPU)
+# endif()
 
-if(ENABLE_TEST)
-  message(STATUS "Build with TEST.")
-  add_subdirectory(third-party/googletest ${CMAKE_CURRENT_BINARY_DIR}/googletest EXCLUDE_FROM_ALL)
+# if(ENABLE_TEST)
+#   message(STATUS "Build with TEST.")
+#   add_subdirectory(third-party/googletest ${CMAKE_CURRENT_BINARY_DIR}/googletest EXCLUDE_FROM_ALL)
 
-  file(GLOB TEST_SRC test/*.cpp test/CPU/*.cpp test/CPU/*.h)
-  if(ENABLE_GPU)
-    file(GLOB_RECURSE GPU_TEST_SRC test/GPU/*.cpp test/GPU/*.h)
-    list(APPEND TEST_SRC ${GPU_TEST_SRC})
-  endif()
-  add_executable(InferLLMTest ${TEST_SRC})
-  target_include_directories(InferLLMTest PUBLIC test inlude src)
-  target_link_libraries(InferLLMTest InferLLM gtest)
-endif()
+#   file(GLOB TEST_SRC test/*.cpp test/CPU/*.cpp test/CPU/*.h)
+#   if(ENABLE_GPU)
+#     file(GLOB_RECURSE GPU_TEST_SRC test/GPU/*.cpp test/GPU/*.h)
+#     list(APPEND TEST_SRC ${GPU_TEST_SRC})
+#   endif()
+#   add_executable(InferLLMTest ${TEST_SRC})
+#   target_include_directories(InferLLMTest PUBLIC test inlude src)
+#   target_link_libraries(InferLLMTest InferLLM gtest)
+# endif()
